<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:text="@string/tic_tac_toe"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#B947FF"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <Button
            android:id="@+id/single_player"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:text="@string/single_player"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:strokeColor="#009C1616" />

        <Button
            android:id="@+id/multi_player"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:text="@string/multi_player"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:strokeColor="#009C1616" />

        <Button
            android:id="@+id/options"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:text="@string/options"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:strokeColor="#009C1616" />

        <Button
            android:id="@+id/exit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:strokeColor="#009C1616" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>